--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
             <div id="reported">
                 <h1>Reported posts</h1>
             </div>
+
+            <section class="pt-5">
+                <h2>1. জাভাস্ক্রিপ্ট কিভাবে কাজ করে?</h2>
+                <p><Strong>উত্তর:</Strong> জাভাস্ক্রিপ্ট একটি স্ক্রিপ্টিং লেংগুইজড এবং এটি একটি ক্লায়েন্ট-সাইড স্ক্রিপ্টিং লেংগুইজড  হিসাবেও পরিচিত। জাভাস্ক্রিপ্ট কীভাবে কাজ করে এবং কীসের জন্য, এটি সম্পূর্ণরূপে ওয়েব ডেভেলোপার এর উপর নির্ভর করে। এছাড়াও ব্রাউজার কিভাবে জাভাস্ক্রিপ্ট কোড বোঝে আরেকটি প্রশ্ন আসে। বেশিরভাগ ওয়েব ব্রাউজারে নিজস্ব জাভাস্ক্রিপ্ট ইঞ্জিন থাকে। এই ক্ষেত্রে অনেকে ক্রোম ব্রাউজার ব্যবহার করে এবং ক্রোম ব্রাউজার V8 ইঞ্জিন ব্যবহার করে থাকে । যখন আমরা একটি ওয়েব ব্রাউজারের ভিতরে একটি জাভাস্ক্রিপ্ট কোড চালাই, তখন জাভাস্ক্রিপ্ট কোড ব্রাউজারের ইঞ্জিন এর মাধ্যমে সোর্স কোড ব্যবহার করে আউটপুট দেখায়। </p>
+                <h2>2. লোকাল স্টোরেজ এবং সেশন স্টোরেজ কী?</h2>
+                <p><Strong>উত্তর:</Strong> লোকাল স্টোরেজ এবং সেশন স্টোরেজ হল একটি অবজেক্ট এবং এটি ওয়েব স্টোরেজ API এর একটি অংশ। এই দুটি API টুল স্থানীয়ভাবে Key  বা Value  জোড়া সংরক্ষণ করে। লোকাল স্টোরেজ এবং সেশন স্টোরেজ প্রায় একই, কিন্তু সেশন স্টোরেজি একটু ভিন্ন। সেশন স্টোরেজ ডেটা কে শুধুমাত্র উইন্ডো বা ট্যাব বন্ধ না হওয়া পর্যন্ত জমা করে রেখে দেয়। এবং লোকাল স্টোরেজ, ব্যবহারকারী ম্যানুয়ালি সেশনটি কেটে না ফেলা পর্যন্ত ডেটা সংরক্ষণ করে রাখে।</p>
+              </section>
         </main>
+        
+
         <footer></footer>
 
         <!-- add javascript  file  -->
